<resources>
    <string name="app_name">Anigma</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in_msg">Let\'s sign you in for hassle free access from multiple devices.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_password">Enter password</string>
    <string name="submit">SIGN UP</string>
    <string name="sign_up_msg">Sign up below with your email so we can quickly setup your personal account.</string>
    <string name="login_msg">Sign in below so we could fetch your account details.</string>
    <string name="logo_image">Logo Image</string>
    <string name="please_wait">Please Wait!</string>

    <string name="nav_myProfile">My Profile</string>
    <string name="nav_signOut">Sign Out</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="board_name">Board Name</string>
    <string name="create">Create</string>
    <string name="add_action">add new button</string>
    <string name="create_board">Create Board</string>
</resources>