<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_screen2"
    tools:context=".anigma.activities.Login">

   <ImageView
       android:layout_width="314dp"
       android:layout_height="314dp"
       android:src="@drawable/login_image"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toTopOf="@id/tv_singup_message"/>

    <TextView
        android:id="@+id/tv_singup_message"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/sign_in_msg"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/tv_signin"
        app:layout_constraintEnd_toEndOf="@id/tv_signin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tv_signin" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="314dp"
        android:layout_height="55dp"
        android:layout_marginTop="500dp"
        android:background="@drawable/tv_ripple"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="@dimen/button_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.494" />

    <TextView
        android:id="@+id/tv_signin"
        android:layout_width="314dp"
        android:layout_height="55dp"
        android:layout_marginTop="428dp"
        android:background="@drawable/tv_ripple"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="@dimen/button_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.379" />

</androidx.constraintlayout.widget.ConstraintLayout>