<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#41477A"
    tools:context=".anigma.activities.UserSignIn">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_item"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"/>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:src="@drawable/anigma"
        app:layout_constraintTop_toBottomOf="@id/toolbar_item"
        app:layout_constraintBottom_toTopOf="@id/cardview_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardview_item"
        app:cardBackgroundColor="#E4E3D8"
        android:elevation="10dp"
        android:outlineAmbientShadowColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/toolbar_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="@dimen/general_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_msg"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/general_width"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    tools:ignore="TextContrastCheck"
                    android:layout_marginBottom="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/general_width"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:hint="@string/enter_password">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    tools:ignore="TextContrastCheck"
                    android:layout_marginBottom="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/sign_in_btn"
                android:background="@drawable/ripple_effect_btn"
                android:layout_width="@dimen/general_width"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/button_size"
                android:textStyle="bold"
                android:gravity="center"
                />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>